# msgpack-python

./: .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  ChangeLog.rst  DEVELOP.md  MANIFEST.in  Makefile  README.md  README.rst  ROADMAP.md  appveyor.yml  build_windows.bat  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  upload_windows.bat
.github/workflows/: black.yaml  docs.yaml  lint.yaml  linux.yml  mac.yml  test.yml  test_debug.yml  wheel.yml  windows.yaml
benchmark/: benchmark.py
ci/: runtests.bat  runtests.sh
docker/: buildwheel.sh  runtests.sh  shared.env
docs/: Makefile  advanced.rst  api.rst  conf.py  index.rst  requirements.txt
docs/_static/: README.txt
dummy/: README  setup.py
fuzz/: differential_fuzzer.py  test_differential_fuzzer.py
msgpack/: __init__.py  __init__.pyi  _cmsgpack.pyx  _msgpack.pyx  _packer.pyx  _packer.pyxbld  _streamingpacker.pyx  _unpacker.pyx  _unpacker.pyxbld  _version.py  appveyor.yml  buff_converter.h  compat.py  exceptions.py  ext.py  fallback.py  pack.h  pack_template.h  py.typed  sysdep.h  unpack.h  unpack_container_header.h  unpack_define.h  unpack_template.h
msgpack_sorted/: __init__.py  _packer.pyx  fallback.py  unpack_define.h
test/: test_buffer.py  test_canonical.py  test_case.py  test_discrepancy.py  test_except.py  test_extension.py  test_format.py  test_limits.py  test_memoryview.py  test_multithreading.py  test_newspec.py  test_obj.py  test_pack.py  test_property_based.py  test_read_size.py  test_reserved.py  test_seq.py  test_sequnpack.py  test_stricttype.py  test_subtype.py  test_timestamp.py  test_unpack.py  test_unpack_file.py  test_unpack_raw.py  test_warn.py
