[build-system]
requires = ["setuptools >= 69.5.1"]
build-backend = "setuptools.build_meta"

[project]
name = "msgpack"
dynamic = ["version"]
license = {text="Apache 2.0"}
authors = [{name="Inada Naoki", email="songofacandy@gmail.com"}]
description = "MessagePack serializer"
readme = "README.md"
keywords = ["msgpack", "messagepack", "serializer", "serialization", "binary"]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
Homepage = "https://msgpack.org/"
Documentation = "https://msgpack-python.readthedocs.io/"
Repository = "https://github.com/msgpack/msgpack-python/"
Tracker = "https://github.com/msgpack/msgpack-python/issues"
Changelog = "https://github.com/msgpack/msgpack-python/blob/main/ChangeLog.rst"

[tool.setuptools]
# Do not install C/C++/Cython source files
include-package-data = false

[tool.setuptools.dynamic]
version = {attr = "msgpack.__version__"}

[tool.ruff]
line-length = 100
target-version = "py38"
lint.select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "I", # isort
    #"UP", pyupgrade
]
