[metadata]
name = msgpack
#version = attr: msgpack.__version__
version = attr: msgpack.version
license = Apache 2.0
author = Inada Naoki
author_email = songofacandy@gmail.com
description = MessagePack serializer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://msgpack.org/

project_urls =
    Documentation = https://msgpack-python.readthedocs.io/
    Source = https://github.com/msgpack/msgpack-python
    Tracker = https://github.com/msgpack/msgpack-python/issues

classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License

[flake8]
max_line_length = 100

